y.output
Terminaux inutilisés dans la grammaire

   O_BRACK
   C_BRACK


État 141 conflits: 1 décalage/réduction
État 176 conflits: 1 décalage/réduction


Grammaire

    0 $accept: Programme $end

    1 Programme: Class

    2 Class: ClassPrototype O_ACCOL Declarations Main C_ACCOL

    3 ClassPrototype: ACCESS CLASS ID ClassInheritance
    4               | CLASS ID ClassInheritance

    5 ClassInheritance: EXTENDS ID
    6                 | %empty

    7 Declarations: ACCESS STATIC TYPE ID Declaration Declarations
    8             | ACCESS STATIC VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations
    9             | STATIC TYPE ID Declaration Declarations
   10             | STATIC VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations
   11             | TYPE ID Declaration Declarations
   12             | VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations
   13             | ACCESS TYPE ID Declaration Declarations
   14             | ACCESS VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations
   15             | %empty

   16 Declaration: O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions RETURN Calcul S_COLON C_ACCOL
   17            | VariableDeclarations

   18 VariableDeclarations: COMA ID VariableDeclarations
   19                     | S_COLON

   20 PrototypeParameters: TYPE ID MultiplePrototypeParameters
   21                    | %empty

   22 MultiplePrototypeParameters: COMA TYPE ID MultiplePrototypeParameters
   23                            | %empty

   24 Instructions: IF O_PAREN Comparison C_PAREN O_ACCOL Instructions C_ACCOL Else
   25             | Calcul S_COLON Instructions
   26             | Binding S_COLON Instructions
   27             | WHILE O_PAREN Comparison O_PAREN O_ACCOL Instructions C_ACCOL Instructions
   28             | DO O_ACCOL Instructions C_ACCOL WHILE O_PAREN Comparison C_PAREN S_COLON Instructions
   29             | FOR O_PAREN Binding S_COLON Comparison S_COLON IncrementeDecremente C_PAREN O_ACCOL Instructions C_ACCOL Instructions
   30             | SOP O_PAREN Printable C_PAREN S_COLON Instructions
   31             | ID O_PAREN Parameters C_PAREN
   32             | %empty

   33 Else: ELSE IF O_PAREN Comparison C_PAREN O_ACCOL Instructions C_ACCOL Else
   34     | ELSE O_ACCOL Instructions C_ACCOL
   35     | %empty

   36 Calcul: NUMBER PLUS Calcul
   37       | NUMBER MINUS Calcul
   38       | NUMBER TIMES Calcul
   39       | NUMBER DIV Calcul
   40       | ID PLUS Calcul
   41       | ID MINUS Calcul
   42       | ID TIMES Calcul
   43       | ID DIV Calcul
   44       | NUMBER
   45       | ID

   46 IncrementeDecremente: ID PLUS PLUS
   47                     | ID MINUS MINUS
   48                     | ID PLUS EQUAL Calcul
   49                     | ID MINUS EQUAL Calcul
   50                     | ID TIMES EQUAL Calcul
   51                     | ID DIV EQUAL Calcul

   52 Binding: ID EQUAL Binding
   53        | ID EQUAL Calcul

   54 Printable: STRING
   55          | STRING PLUS Printable
   56          | ID
   57          | ID PLUS Printable

   58 Comparison: Statement AND Comparison
   59           | Statement OR Comparison
   60           | Statement COMP_OPS Statement
   61           | Statement

   62 Statement: BOOL_VALS
   63          | Calcul
   64          | NOT Statement

   65 Parameters: ID Parameters MultipleParameters
   66           | %empty

   67 MultipleParameters: COMA ID MultipleParameters
   68                   | %empty

   69 Main: MAIN_PROTOTYPE O_ACCOL Declarations Instructions C_ACCOL


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NUMBER (258) 36 37 38 39 44
PLUS (259) 36 40 46 48 55 57
MINUS (260) 37 41 47 49
TIMES (261) 38 42 50
DIV (262) 39 43 51
COMP_OPS (263) 60
TYPE (264) 7 9 11 13 20 22
ID (265) 3 4 5 7 8 9 10 11 12 13 14 18 20 22 31 40 41 42 43 45 46 47
    48 49 50 51 52 53 56 57 65 67
VOID (266) 8 10 12 14
STRING (267) 54 55
BOOL_VALS (268) 62
ACCESS (269) 3 7 8 13 14
EXTENDS (270) 5
MAIN_PROTOTYPE (271) 69
SOP (272) 30
O_PAREN (273) 8 10 12 14 16 24 27 28 29 30 31 33
C_PAREN (274) 8 10 12 14 16 24 28 29 30 31 33
O_ACCOL (275) 2 8 10 12 14 16 24 27 28 29 33 34 69
C_ACCOL (276) 2 8 10 12 14 16 24 27 28 29 33 34 69
O_BRACK (277)
C_BRACK (278)
S_COLON (279) 16 19 25 26 28 29 30
COMA (280) 18 22 67
NOT (281) 64
EQUAL (282) 48 49 50 51 52 53
CLASS (283) 3 4
STATIC (284) 7 8 9 10
RETURN (285) 16
AND (286) 58
OR (287) 59
DO (288) 28
FOR (289) 29
WHILE (290) 27 28
IF (291) 24 33
ELSE (292) 33 34


Non-terminaux, suivis des règles où ils apparaissent

$accept (38)
    à gauche: 0
Programme (39)
    à gauche: 1, à droite: 0
Class (40)
    à gauche: 2, à droite: 1
ClassPrototype (41)
    à gauche: 3 4, à droite: 2
ClassInheritance (42)
    à gauche: 5 6, à droite: 3 4
Declarations (43)
    à gauche: 7 8 9 10 11 12 13 14 15, à droite: 2 7 8 9 10 11 12
    13 14 69
Declaration (44)
    à gauche: 16 17, à droite: 7 9 11 13
VariableDeclarations (45)
    à gauche: 18 19, à droite: 17 18
PrototypeParameters (46)
    à gauche: 20 21, à droite: 8 10 12 14 16
MultiplePrototypeParameters (47)
    à gauche: 22 23, à droite: 20 22
Instructions (48)
    à gauche: 24 25 26 27 28 29 30 31 32, à droite: 8 10 12 14 16
    24 25 26 27 28 29 30 33 34 69
Else (49)
    à gauche: 33 34 35, à droite: 24 33
Calcul (50)
    à gauche: 36 37 38 39 40 41 42 43 44 45, à droite: 16 25 36 37
    38 39 40 41 42 43 48 49 50 51 53 63
IncrementeDecremente (51)
    à gauche: 46 47 48 49 50 51, à droite: 29
Binding (52)
    à gauche: 52 53, à droite: 26 29 52
Printable (53)
    à gauche: 54 55 56 57, à droite: 30 55 57
Comparison (54)
    à gauche: 58 59 60 61, à droite: 24 27 28 29 33 58 59
Statement (55)
    à gauche: 62 63 64, à droite: 58 59 60 61 64
Parameters (56)
    à gauche: 65 66, à droite: 31 65
MultipleParameters (57)
    à gauche: 67 68, à droite: 65 67
Main (58)
    à gauche: 69, à droite: 2


État 0

    0 $accept: . Programme $end

    ACCESS  décalage et aller à l'état 1
    CLASS   décalage et aller à l'état 2

    Programme       aller à l'état 3
    Class           aller à l'état 4
    ClassPrototype  aller à l'état 5


État 1

    3 ClassPrototype: ACCESS . CLASS ID ClassInheritance

    CLASS  décalage et aller à l'état 6


État 2

    4 ClassPrototype: CLASS . ID ClassInheritance

    ID  décalage et aller à l'état 7


État 3

    0 $accept: Programme . $end

    $end  décalage et aller à l'état 8


État 4

    1 Programme: Class .

    $défaut  réduction par utilisation de la règle 1 (Programme)


État 5

    2 Class: ClassPrototype . O_ACCOL Declarations Main C_ACCOL

    O_ACCOL  décalage et aller à l'état 9


État 6

    3 ClassPrototype: ACCESS CLASS . ID ClassInheritance

    ID  décalage et aller à l'état 10


État 7

    4 ClassPrototype: CLASS ID . ClassInheritance

    EXTENDS  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 6 (ClassInheritance)

    ClassInheritance  aller à l'état 12


État 8

    0 $accept: Programme $end .

    $défaut  accepter


État 9

    2 Class: ClassPrototype O_ACCOL . Declarations Main C_ACCOL

    TYPE    décalage et aller à l'état 13
    VOID    décalage et aller à l'état 14
    ACCESS  décalage et aller à l'état 15
    STATIC  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 17


État 10

    3 ClassPrototype: ACCESS CLASS ID . ClassInheritance

    EXTENDS  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 6 (ClassInheritance)

    ClassInheritance  aller à l'état 18


État 11

    5 ClassInheritance: EXTENDS . ID

    ID  décalage et aller à l'état 19


État 12

    4 ClassPrototype: CLASS ID ClassInheritance .

    $défaut  réduction par utilisation de la règle 4 (ClassPrototype)


État 13

   11 Declarations: TYPE . ID Declaration Declarations

    ID  décalage et aller à l'état 20


État 14

   12 Declarations: VOID . ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    ID  décalage et aller à l'état 21


État 15

    7 Declarations: ACCESS . STATIC TYPE ID Declaration Declarations
    8             | ACCESS . STATIC VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations
   13             | ACCESS . TYPE ID Declaration Declarations
   14             | ACCESS . VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    TYPE    décalage et aller à l'état 22
    VOID    décalage et aller à l'état 23
    STATIC  décalage et aller à l'état 24


État 16

    9 Declarations: STATIC . TYPE ID Declaration Declarations
   10             | STATIC . VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    TYPE  décalage et aller à l'état 25
    VOID  décalage et aller à l'état 26


État 17

    2 Class: ClassPrototype O_ACCOL Declarations . Main C_ACCOL

    MAIN_PROTOTYPE  décalage et aller à l'état 27

    Main  aller à l'état 28


État 18

    3 ClassPrototype: ACCESS CLASS ID ClassInheritance .

    $défaut  réduction par utilisation de la règle 3 (ClassPrototype)


État 19

    5 ClassInheritance: EXTENDS ID .

    $défaut  réduction par utilisation de la règle 5 (ClassInheritance)


État 20

   11 Declarations: TYPE ID . Declaration Declarations

    O_PAREN  décalage et aller à l'état 29
    S_COLON  décalage et aller à l'état 30
    COMA     décalage et aller à l'état 31

    Declaration           aller à l'état 32
    VariableDeclarations  aller à l'état 33


État 21

   12 Declarations: VOID ID . O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    O_PAREN  décalage et aller à l'état 34


État 22

   13 Declarations: ACCESS TYPE . ID Declaration Declarations

    ID  décalage et aller à l'état 35


État 23

   14 Declarations: ACCESS VOID . ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    ID  décalage et aller à l'état 36


État 24

    7 Declarations: ACCESS STATIC . TYPE ID Declaration Declarations
    8             | ACCESS STATIC . VOID ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    TYPE  décalage et aller à l'état 37
    VOID  décalage et aller à l'état 38


État 25

    9 Declarations: STATIC TYPE . ID Declaration Declarations

    ID  décalage et aller à l'état 39


État 26

   10 Declarations: STATIC VOID . ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    ID  décalage et aller à l'état 40


État 27

   69 Main: MAIN_PROTOTYPE . O_ACCOL Declarations Instructions C_ACCOL

    O_ACCOL  décalage et aller à l'état 41


État 28

    2 Class: ClassPrototype O_ACCOL Declarations Main . C_ACCOL

    C_ACCOL  décalage et aller à l'état 42


État 29

   16 Declaration: O_PAREN . PrototypeParameters C_PAREN O_ACCOL Instructions RETURN Calcul S_COLON C_ACCOL

    TYPE  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 21 (PrototypeParameters)

    PrototypeParameters  aller à l'état 44


État 30

   19 VariableDeclarations: S_COLON .

    $défaut  réduction par utilisation de la règle 19 (VariableDeclarations)


État 31

   18 VariableDeclarations: COMA . ID VariableDeclarations

    ID  décalage et aller à l'état 45


État 32

   11 Declarations: TYPE ID Declaration . Declarations

    TYPE    décalage et aller à l'état 13
    VOID    décalage et aller à l'état 14
    ACCESS  décalage et aller à l'état 15
    STATIC  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 46


État 33

   17 Declaration: VariableDeclarations .

    $défaut  réduction par utilisation de la règle 17 (Declaration)


État 34

   12 Declarations: VOID ID O_PAREN . PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    TYPE  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 21 (PrototypeParameters)

    PrototypeParameters  aller à l'état 47


État 35

   13 Declarations: ACCESS TYPE ID . Declaration Declarations

    O_PAREN  décalage et aller à l'état 29
    S_COLON  décalage et aller à l'état 30
    COMA     décalage et aller à l'état 31

    Declaration           aller à l'état 48
    VariableDeclarations  aller à l'état 33


État 36

   14 Declarations: ACCESS VOID ID . O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    O_PAREN  décalage et aller à l'état 49


État 37

    7 Declarations: ACCESS STATIC TYPE . ID Declaration Declarations

    ID  décalage et aller à l'état 50


État 38

    8 Declarations: ACCESS STATIC VOID . ID O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    ID  décalage et aller à l'état 51


État 39

    9 Declarations: STATIC TYPE ID . Declaration Declarations

    O_PAREN  décalage et aller à l'état 29
    S_COLON  décalage et aller à l'état 30
    COMA     décalage et aller à l'état 31

    Declaration           aller à l'état 52
    VariableDeclarations  aller à l'état 33


État 40

   10 Declarations: STATIC VOID ID . O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    O_PAREN  décalage et aller à l'état 53


État 41

   69 Main: MAIN_PROTOTYPE O_ACCOL . Declarations Instructions C_ACCOL

    TYPE    décalage et aller à l'état 13
    VOID    décalage et aller à l'état 14
    ACCESS  décalage et aller à l'état 15
    STATIC  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 54


État 42

    2 Class: ClassPrototype O_ACCOL Declarations Main C_ACCOL .

    $défaut  réduction par utilisation de la règle 2 (Class)


État 43

   20 PrototypeParameters: TYPE . ID MultiplePrototypeParameters

    ID  décalage et aller à l'état 55


État 44

   16 Declaration: O_PAREN PrototypeParameters . C_PAREN O_ACCOL Instructions RETURN Calcul S_COLON C_ACCOL

    C_PAREN  décalage et aller à l'état 56


État 45

   18 VariableDeclarations: COMA ID . VariableDeclarations

    S_COLON  décalage et aller à l'état 30
    COMA     décalage et aller à l'état 31

    VariableDeclarations  aller à l'état 57


État 46

   11 Declarations: TYPE ID Declaration Declarations .

    $défaut  réduction par utilisation de la règle 11 (Declarations)


État 47

   12 Declarations: VOID ID O_PAREN PrototypeParameters . C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    C_PAREN  décalage et aller à l'état 58


État 48

   13 Declarations: ACCESS TYPE ID Declaration . Declarations

    TYPE    décalage et aller à l'état 13
    VOID    décalage et aller à l'état 14
    ACCESS  décalage et aller à l'état 15
    STATIC  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 59


État 49

   14 Declarations: ACCESS VOID ID O_PAREN . PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    TYPE  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 21 (PrototypeParameters)

    PrototypeParameters  aller à l'état 60


État 50

    7 Declarations: ACCESS STATIC TYPE ID . Declaration Declarations

    O_PAREN  décalage et aller à l'état 29
    S_COLON  décalage et aller à l'état 30
    COMA     décalage et aller à l'état 31

    Declaration           aller à l'état 61
    VariableDeclarations  aller à l'état 33


État 51

    8 Declarations: ACCESS STATIC VOID ID . O_PAREN PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    O_PAREN  décalage et aller à l'état 62


État 52

    9 Declarations: STATIC TYPE ID Declaration . Declarations

    TYPE    décalage et aller à l'état 13
    VOID    décalage et aller à l'état 14
    ACCESS  décalage et aller à l'état 15
    STATIC  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 63


État 53

   10 Declarations: STATIC VOID ID O_PAREN . PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    TYPE  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 21 (PrototypeParameters)

    PrototypeParameters  aller à l'état 64


État 54

   69 Main: MAIN_PROTOTYPE O_ACCOL Declarations . Instructions C_ACCOL

    NUMBER  décalage et aller à l'état 65
    ID      décalage et aller à l'état 66
    SOP     décalage et aller à l'état 67
    DO      décalage et aller à l'état 68
    FOR     décalage et aller à l'état 69
    WHILE   décalage et aller à l'état 70
    IF      décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 32 (Instructions)

    Instructions  aller à l'état 72
    Calcul        aller à l'état 73
    Binding       aller à l'état 74


État 55

   20 PrototypeParameters: TYPE ID . MultiplePrototypeParameters

    COMA  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 23 (MultiplePrototypeParameters)

    MultiplePrototypeParameters  aller à l'état 76


État 56

   16 Declaration: O_PAREN PrototypeParameters C_PAREN . O_ACCOL Instructions RETURN Calcul S_COLON C_ACCOL

    O_ACCOL  décalage et aller à l'état 77


État 57

   18 VariableDeclarations: COMA ID VariableDeclarations .

    $défaut  réduction par utilisation de la règle 18 (VariableDeclarations)


État 58

   12 Declarations: VOID ID O_PAREN PrototypeParameters C_PAREN . O_ACCOL Instructions C_ACCOL Declarations

    O_ACCOL  décalage et aller à l'état 78


État 59

   13 Declarations: ACCESS TYPE ID Declaration Declarations .

    $défaut  réduction par utilisation de la règle 13 (Declarations)


État 60

   14 Declarations: ACCESS VOID ID O_PAREN PrototypeParameters . C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    C_PAREN  décalage et aller à l'état 79


État 61

    7 Declarations: ACCESS STATIC TYPE ID Declaration . Declarations

    TYPE    décalage et aller à l'état 13
    VOID    décalage et aller à l'état 14
    ACCESS  décalage et aller à l'état 15
    STATIC  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 15 (Declarations)

    Declarations  aller à l'état 80


État 62

    8 Declarations: ACCESS STATIC VOID ID O_PAREN . PrototypeParameters C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    TYPE  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 21 (PrototypeParameters)

    PrototypeParameters  aller à l'état 81


État 63

    9 Declarations: STATIC TYPE ID Declaration Declarations .

    $défaut  réduction par utilisation de la règle 9 (Declarations)


État 64

   10 Declarations: STATIC VOID ID O_PAREN PrototypeParameters . C_PAREN O_ACCOL Instructions C_ACCOL Declarations

    C_PAREN  décalage et aller à l'état 82


État 65

   36 Calcul: NUMBER . PLUS Calcul
   37       | NUMBER . MINUS Calcul
   38       | NUMBER . TIMES Calcul
   39       | NUMBER . DIV Calcul
   44       | NUMBER .

    PLUS   décalage et aller à l'état 83
    MINUS  décalage et aller à l'état 84
    TIMES  décalage et aller à l'état 85
    DIV    décalage et aller à l'état 86

    $défaut  réduction par utilisation de la règle 44 (Calcul)


État 66

   31 Instructions: ID . O_PAREN Parameters C_PAREN
   40 Calcul: ID . PLUS Calcul
   41       | ID . MINUS Calcul
   42       | ID . TIMES Calcul
   43       | ID . DIV Calcul
   45       | ID .
   52 Binding: ID . EQUAL Binding
   53        | ID . EQUAL Calcul

    PLUS     décalage et aller à l'état 87
    MINUS    décalage et aller à l'état 88
    TIMES    décalage et aller à l'état 89
    DIV      décalage et aller à l'état 90
    O_PAREN  décalage et aller à l'état 91
    EQUAL    décalage et aller à l'état 92

    $défaut  réduction par utilisation de la règle 45 (Calcul)


État 67

   30 Instructions: SOP . O_PAREN Printable C_PAREN S_COLON Instructions

    O_PAREN  décalage et aller à l'état 93


État 68
